[gd_scene load_steps=7 format=3 uid="uid://b260qx65e12vm"]

[ext_resource type="Script" uid="uid://cr8411ur6hflf" path="res://scripts/npc_fighter/npc_fighter.gd" id="1_nyfy8"]
[ext_resource type="SpriteFrames" uid="uid://c8vtesyqckrwx" path="res://assets/player/fighter/ryu-ONLY-FOR-TESTING.tres" id="2_xqkp0"]
[ext_resource type="Script" uid="uid://u1kciasdne3a" path="res://scripts/state_machine/state_machine.gd" id="3_3ai2r"]
[ext_resource type="Script" uid="uid://b05is1jirs3u4" path="res://scripts/npc_fighter/states/npc_idle.gd" id="4_nyfy8"]
[ext_resource type="Script" uid="uid://gqitdm8to0b3" path="res://scripts/npc_fighter/states/npc_movement.gd" id="5_xqkp0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdiyx"]
size = Vector2(427, 669)

[node name="NPCFight" type="CharacterBody2D" groups=["NPC"]]
collision_layer = 512
collision_mask = 256
script = ExtResource("1_nyfy8")

[node name="RYU" type="AnimatedSprite2D" parent="."]
scale = Vector2(-7, 7)
sprite_frames = ExtResource("2_xqkp0")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.854524

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(5.5, 51.5)
shape = SubResource("RectangleShape2D_sdiyx")
debug_color = Color(0.43, 0.43, 0.43, 0.439216)

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_3ai2r")
starting_state = NodePath("S_Idle")

[node name="S_Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state")]
scale = Vector2(7, 7)
script = ExtResource("4_nyfy8")
idle_state = NodePath(".")
move_state = NodePath("../S_Movement")

[node name="S_Movement" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("5_xqkp0")
idle_state = NodePath("../S_Idle")
move_state = NodePath(".")
